kubernetes/pannenstreifen/02-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: default
  name: pannenstreifen-website
  labels:
    app: pannenstreifen-website

spec:
  replicas: 1
  selector:
    matchLabels:
      app: pannenstreifen-website
  template:
    metadata:
      labels:
        app: pannenstreifen-website
    spec:
      automountServiceAccountToken: false
      containers:
        - name: pannenstreifen-website
          image: ghcr.io/calfur/pannenstreifen-website:c45b6dbfcdd9816f81850dd0a41bc8cd2c0d60e1
          ports:
            - name: web
              containerPort: 80
