kubernetes/pannenstreifen/03-ingress.yml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  namespace: default
  name: ingressroute-pannenstreifen-website
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`pannenstreifen.calfur.dev`)
      kind: Rule
      services:
        - name: pannenstreifen-website
          port: 80
  tls:
    certResolver: myresolver
